k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees
  labels:
    app: employees
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employees
  template:
    metadata:
      labels:
        app: employees
    spec:
      containers:
        - name: employees
          image: nogada/employees
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: spring-properties
            mountPath: /app/config
      volumes:
      - name: spring-properties
        configMap:
          name: config
