k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employees
spec:
  selector:
    app: employees
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
