k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employees
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "sam.htdp1.kubepia.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: employees
            port:
              number: 80
